--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,18 @@ after_success:
   - docker push neha/multi-nginx
   - docker push neha/multi-server
   - docker push neha/multi-worker
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-south-1"
+  app: "multi_docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-954516000444"
+  bucket_path: "multi_docker"
+  on:
+    branch: master
+  access_key_id : $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure : "$AWS_SECRET_KEY"
 
 
 
