--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,10 +7,13 @@ upstream api{
 }
 
 server{
-    listen 80;
+    listen 3000;
+    
     location / {
-        proxy_pass http://client;
-    }
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;  <<------Add this!!!!
+  }
     location /sockjs-node {
         proxy_pass http://client;
         proxy_http_version 1.1;
